<resources>
    <string name="app_name">IChef</string>
    <string name="i_just_want_to_find_a_recipe">I just want to find a recipe</string>
    <string name="ichef">IChef</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_my_recipes">MyRecipes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out">Log out</string>
</resources>